k8s/price-poc/overlays/dev/patch-db-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: price-poc
  name: price-poc
spec:
  template:
    spec:
      containers:
        - name: price-poc
