k8s/price-poc/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.id: 6e338414-2f10-45ea-8be8-e3ebea2fb4bf # Load balancer ID. Replace it with the actual value.
  labels:
    app: price-poc
  name: price-poc
